--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2830,
+   "execution_count": 2895,
    "metadata": {
     "tags": [
      "hide"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2831,
+   "execution_count": 2896,
    "metadata": {
     "tags": [
      "hide"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2832,
+   "execution_count": 2897,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2833,
+   "execution_count": 2898,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2834,
+   "execution_count": 2899,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2835,
+   "execution_count": 2900,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2836,
+   "execution_count": 2901,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "True         19003    531"
       ]
      },
-     "execution_count": 2836,
+     "execution_count": 2901,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2837,
+   "execution_count": 2902,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "True        0.972817  0.027183"
       ]
      },
-     "execution_count": 2837,
+     "execution_count": 2902,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2838,
+   "execution_count": 2903,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2839,
+   "execution_count": 2904,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "True        125987  11875"
       ]
      },
-     "execution_count": 2839,
+     "execution_count": 2904,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2840,
+   "execution_count": 2905,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "True        0.913863  0.086137"
       ]
      },
-     "execution_count": 2840,
+     "execution_count": 2905,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,12 +524,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2841,
+   "execution_count": 2906,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['product_id_na'] = df['product_id'].isna()\n",
-    "# df = df.drop(columns=[\"product_id\"])"
+    "df = df.drop(columns=[\"product_id\"])"
    ]
   },
   {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2842,
+   "execution_count": 2907,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2843,
+   "execution_count": 2908,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2844,
+   "execution_count": 2909,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2845,
+   "execution_count": 2910,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2846,
+   "execution_count": 2911,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2847,
+   "execution_count": 2912,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2848,
+   "execution_count": 2913,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2849,
+   "execution_count": 2914,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,13 @@
       "item_id :\f 27695\n",
       "listing_type_id :\f 2\n",
       "logistic_type :\f 7\n",
-      "main_picture :\f 26961\n",
+      "main_picture :\f 26961\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "platform :\f 4\n",
       "print_server_timestamp :\f 196780\n",
       "site_id :\f 1\n",
@@ -776,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2850,
+   "execution_count": 2915,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2851,
+   "execution_count": 2916,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2852,
+   "execution_count": 2917,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2853,
+   "execution_count": 2918,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2854,
+   "execution_count": 2919,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2855,
+   "execution_count": 2920,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +893,7 @@
        "Name: cat_warranty, dtype: int64"
       ]
      },
-     "execution_count": 2855,
+     "execution_count": 2920,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2856,
+   "execution_count": 2921,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2857,
+   "execution_count": 2922,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2858,
+   "execution_count": 2923,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +975,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 2858,
+     "execution_count": 2923,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2859,
+   "execution_count": 2924,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2860,
+   "execution_count": 2925,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2861,
+   "execution_count": 2926,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2862,
+   "execution_count": 2927,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2863,
+   "execution_count": 2928,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1216,7 @@
        "[199972 rows x 2 columns]"
       ]
      },
-     "execution_count": 2863,
+     "execution_count": 2928,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2864,
+   "execution_count": 2929,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2865,
+   "execution_count": 2930,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2866,
+   "execution_count": 2931,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2867,
+   "execution_count": 2932,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2868,
+   "execution_count": 2933,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2869,
+   "execution_count": 2934,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1356,7 @@
        "Index(['full_name', 'title', 'tags'], dtype='object')"
       ]
      },
-     "execution_count": 2869,
+     "execution_count": 2934,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2870,
+   "execution_count": 2935,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1391,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2871,
+   "execution_count": 2936,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2872,
+   "execution_count": 2937,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2873,
+   "execution_count": 2938,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2874,
+   "execution_count": 2939,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2875,
+   "execution_count": 2940,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2876,
+   "execution_count": 2941,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2877,
+   "execution_count": 2942,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2878,
+   "execution_count": 2943,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2879,
+   "execution_count": 2944,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2880,
+   "execution_count": 2945,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2881,
+   "execution_count": 2946,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2882,
+   "execution_count": 2947,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2883,
+   "execution_count": 2948,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2884,
+   "execution_count": 2949,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2885,
+   "execution_count": 2950,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2886,
+   "execution_count": 2951,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2887,
+   "execution_count": 2952,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2888,
+   "execution_count": 2953,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1800,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2889,
+   "execution_count": 2954,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2890,
+   "execution_count": 2955,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2839,7 +2845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## cambiar luego de lugar"
+    "## XGB"
    ]
   },
   {
@@ -3055,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2891,
+   "execution_count": 2956,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3074,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2892,
+   "execution_count": 2957,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3085,31 +3091,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2826,
+   "execution_count": 2958,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=43)"
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2893,
+   "execution_count": 2959,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "# Búsqueda aleatoria\n",
-    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=10, cv=kf, scoring='roc_auc', n_jobs=-1, random_state=9)\n",
-    "\n",
+    "random_search = RandomizedSearchCV(clf, param_distributions=param_dist, n_iter=10, cv=skf, scoring='roc_auc', n_jobs=-1, random_state=9)\n",
     "random_search.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2828,
+   "execution_count": 2960,
    "metadata": {},
    "outputs": [
     {
@@ -3125,7 +3129,7 @@
        " 'subsample': 0.806622389437319}"
       ]
      },
-     "execution_count": 2828,
+     "execution_count": 2960,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3136,16 +3140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2894,
+   "execution_count": 2961,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.899207159562702"
+       "0.8986225469056788"
       ]
      },
-     "execution_count": 2894,
+     "execution_count": 2961,
      "metadata": {},
      "output_type": "execute_result"
     }
